objects/Knowledge_Article_Detail_Config__mdt/Knowledge_Article_Detail_Config__mdt.object-meta.xml
<CustomObject>
    <label>Knowledge Article Detail Config</label>
    <pluralLabel>Knowledge Article Detail Configs</pluralLabel>
</CustomObject>