objects/Knowledge_Article_Detail_Config__mdt/fields/Data_Category_Group_Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Data_Category_Group_Unique_Name__c</fullName>
    <description>Data Category&apos;s &quot;Group Unique Name&quot;</description>
    <inlineHelpText>Data Category&apos;s &quot;Group Unique Name&quot;</inlineHelpText>
    <label>Data Category Group Unique Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>