objects/Knowledge_Article_Detail_Config__mdt/fields/Is_Article_Number_Visible__c.field-meta.xml
<CustomField>
    <fullName>Is_Article_Number_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the &quot;Article Number&quot; is visible on the custom Knowledge Article Detail component</description>
    <inlineHelpText>Indicates whether the &quot;Article Number&quot; is visible on the custom Knowledge Article Detail component</inlineHelpText>
    <label>Article Number Visible?</label>
    <type>Checkbox</type>
</CustomField>