objects/Knowledge_Article_Detail_Config__mdt/fields/Is_Comments_Link_Visible__c.field-meta.xml
<CustomField>
    <fullName>Is_Comments_Link_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the &quot;Comments&quot; link is visible on the custom Knowledge Article Detail component</description>
    <inlineHelpText>Indicates whether the &quot;Comments&quot; link is visible on the custom Knowledge Article Detail component</inlineHelpText>
    <label>Comments Link Visible?</label>
    <type>Checkbox</type>
</CustomField>