objects/Knowledge_Article_Detail_Config__mdt/fields/Is_Social_Sharing_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Is_Social_Sharing_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the &quot;Social Share&quot; buttons are  visible on the custom Knowledge Article Detail component</description>
    <inlineHelpText>Indicates whether the &quot;Social Share&quot; buttons are  visible on the custom Knowledge Article Detail component</inlineHelpText>
    <label>Social Sharing Allowed?</label>
    <type>Checkbox</type>
</CustomField>