objects/Knowledge_Article_Detail_Config__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Data_Category_Group_Unique_Name__c</columns>
    <columns>Is_Article_Number_Visible__c</columns>
    <columns>Is_Comments_Link_Visible__c</columns>
    <columns>Is_Social_Sharing_Allowed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>